# reflection

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
Config/: TypeInfoModuleList.h.in  TypeInfoModuleListImpl.h.in
Examples/: CMakeLists.txt
Examples/CompileTimeReflection/: CMakeLists.txt  Main.cpp
Examples/CustomTypeInfoModule/: CMakeLists.txt  CustomReflection.h  CustomTypeInfoModule.h  Main.cpp  MyCustomType.h
Examples/DynamicMethodCalls/: CMakeLists.txt  Main.cpp
Examples/RuntimeReflection/: CMakeLists.txt  Main.cpp
Examples/RuntimeReflectionConstruction/: CMakeLists.txt  Main.cpp
Examples/TransformDataStructures/: CMakeLists.txt  Main.cpp
Include/Entropy/: DynamicFunction.h  Reflection.h
Include/Entropy/Details/: AttributeCollection.h  Defines.h  MemberEnumeration.h  ReflectionMacros.h  ReflectionUtilityFunctions.h  TypeTraits.h
Include/Entropy/Reflection/: RuntimeReflectionMethods.h  TypeInfo.h  TypeInfo.inl  TypeInfoModule.h  TypeInfoPtr.h  TypeInfoTraits.h
Include/Entropy/Reflection/DataObject/: DataObject.h  DataObject.inl  DataObjectFactory.h
Include/Entropy/Reflection/Details/: AttributeCollection.h  ClassCounter.h  ContainerTypes.h  MemberEnumeration.h  ReflectionMacros.h  ReflectionUtilityFunctions.h  TypeId.h  TypeId.inl  TypeTraits.h  UserOverrideDummy.h
Include/Entropy/Reflection/DynamicFunction/: DynamicFunctionBase.h  DynamicFunctionBase.inl
Include/Entropy/Reflection/TypeInfo/: RuntimeReflectionMethods.h  TypeInfo.h  TypeInfo.inl  TypeInfoPtr.inl  TypeInfoRef.h  TypeInfoRef.inl  TypeInfoTraits.h
Include/Entropy/Reflection/TypeInfoModules/: BasicTypeInfo.h  BasicTypeInfo.inl  ClassTypeInfo.h  ClassTypeInfo.inl  TypeInfoModule.h
Src/DataObject/: DataObject.cpp
Src/TypeInfo/: TypeInfo.cpp  TypeInfoRef.cpp
Src/TypeInfoModules/: ClassTypeInfo.cpp
Tests/: CMakeLists.txt  TestMacros.h
Tests/DynamicFunction/: TestDynamicFunction.cpp  TestDynamicFunctionParams.cpp  TestDynamicFunctionRetVal.cpp
Tests/TypeInfo/: TestCanCastTo.cpp  TestTypeName.cpp
dependencies/: CMakeLists.txt
src/: CMakeLists.txt
